# MaskReplication

./: ..gitignore.un~  .gitignore  .list_of_edits.txt.un~  .todo_v2.txt.un~  Makefile  README.md  age.pub  audit_eval_logs.py  audit_eval_logs_2.py  contributors_cache.json  error_analysis.py  error_scanner.py  inspect_evals_mask_todos.txt  pyproject.toml  reviewed.json
blog/: aggregate_scan.py  analysis.py  constants.py  contributors.py  crypto.py  decorators.py  generate.py  plots.py  review.py  style.css  version.py
blog/sections/: appendix.py  basis.py  changelog.py  dimensions.py  figures.py  footnotes.py  intro.py  recap.py  replication.py  thanks.py
output/: blog_post.html  blog_post.md  style.css
scan_logs/: error_counts.json
scans/error_scanner_final/: error_counts.json
scans/error_scanner_final/scan_id=3y3MPbkUW6ykdzNJdRGdtr/: _scan.json  error_scanner.parquet
scans/error_scanner_final/scan_id=MebLREjwCzT2UxrSw8mTxT/: _scan.json  _summary.json  error_scanner.parquet
scans/error_scanner_final/scan_id=msnpdgbsKJ88YSCiu8Wrzj/: _scan.json  _summary.json  error_scanner.parquet
versions/1/: blog_post.html  blog_post.md  changelog.html  index.html
versions/2/: blog_post.html  blog_post.md  changelog.html  index.html
versions/3/: blog_post.md  changelog.html  index.html
