[project]
name = "mask-blog-post"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
    "inspect-ai>=0.3.205",
    "inspect-scout>=0.4.25",
    "matplotlib>=3.5",
    "numpy>=1.24",
    "pandas>=2.0",
    "Pillow>=9.4",
    "scipy>=1.10",
    "pyrage>=1.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["blog"]
